--- a/app/src/main/res/layout/fragment_grocery.xml
+++ b/app/src/main/res/layout/fragment_grocery.xml
@@ -13,14 +13,61 @@
             android:id="@+id/groceriesRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="top"
-            android:clipToPadding="false">
-            <com.aseproject.frigg.common.FriggRecyclerView
-                android:id="@+id/groceriesRecyclerView"
+            android:clipToPadding="false"
+            android:gravity="top">
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="top"
-                android:scrollbars="vertical"/>
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textStyle="bold"
+                        android:text="Add or edit items to your grocery list that you need to buy."
+                        android:textSize="16sp" />
+
+                    <ImageView
+                        android:id="@+id/ivEditItems"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/edit_icon"/>
+
+                    <ImageView
+                        android:id="@+id/ivAddItems"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginLeft="10dp"
+                        android:src="@drawable/add_icon"/>
+                </LinearLayout>
+
+                <com.aseproject.frigg.common.FriggRecyclerView
+                    android:id="@+id/groceriesRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="top"
+                    android:padding="10dp"
+                    android:scrollbars="vertical" />
+
+                <Button
+                    android:id="@+id/btnSaveEditedItems"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="16dp"
+                    android:visibility="gone"
+                    android:text="SAVE" />
+            </LinearLayout>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
@@ -30,22 +77,22 @@
             android:id="@+id/groceries_empty_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:background="@color/white"
             android:gravity="center"
-            android:background="@color/white">
+            android:orientation="vertical">
 
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="220dp"
-                app:srcCompat="@drawable/ic_launcher_background"/>
+                app:srcCompat="@drawable/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/groceries_empty_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
                 android:layout_marginTop="0dp"
+                android:layout_marginRight="16dp"
                 android:gravity="center"
                 android:text="Sorry! list is empty."
                 android:textSize="15sp" />
