--- a/app/src/main/res/layout/fragment_grocery.xml
+++ b/app/src/main/res/layout/fragment_grocery.xml
@@ -46,8 +46,33 @@
                         android:id="@+id/ivAddItems"
                         android:layout_width="25dp"
                         android:layout_height="25dp"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginLeft="15dp"
                         android:src="@drawable/add_icon"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/llAddItem"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/etItemName"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="15dp"
+                        android:hint="Item name"
+                        android:padding="10dp" />
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="#F9F8FA"
+                        android:paddingEnd="10dp"
+                        android:src="@drawable/mic_off_icon"
+                        android:id="@+id/btn_voice_to_text"/>
                 </LinearLayout>
 
                 <com.aseproject.frigg.common.FriggRecyclerView
@@ -59,14 +84,7 @@
                     android:padding="10dp"
                     android:scrollbars="vertical" />
 
-                <Button
-                    android:id="@+id/btnSaveEditedItems"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_margin="16dp"
-                    android:visibility="gone"
-                    android:text="SAVE" />
+                <include android:id="@+id/btnSaveEditedItems" layout="@layout/button_ui"/>
             </LinearLayout>
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -82,9 +100,9 @@
             android:orientation="vertical">
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="220dp"
-                app:srcCompat="@drawable/ic_launcher_background" />
+                android:layout_width="300dp"
+                android:layout_height="300dp"
+                android:src="@drawable/app_icon"/>
 
             <TextView
                 android:id="@+id/groceries_empty_text_view"
