--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:gravity="center"
-    android:padding="10dp">
+    android:padding="10dp"
+    android:id="@+id/ll_food_item">
 
         <ImageView
             android:id="@+id/iv_item_image"
