--- a/app/src/main/res/layout/fragment_grocery.xml
+++ b/app/src/main/res/layout/fragment_grocery.xml
@@ -3,119 +3,128 @@
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/labs_fragment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="0dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/groceriesRefreshLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:gravity="top">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:textStyle="bold"
-                        android:text="Add or edit items to your grocery list that you need to buy."
-                        android:textSize="16sp" />
-
-                    <ImageView
-                        android:id="@+id/ivEditItems"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_marginLeft="10dp"
-                        android:src="@drawable/edit_icon"/>
-
-                    <ImageView
-                        android:id="@+id/ivAddItems"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_marginLeft="15dp"
-                        android:src="@drawable/add_icon"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/llAddItem"
-                    android:layout_width="match_parent"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    android:visibility="gone"
-                    android:layout_height="wrap_content">
-
-                    <EditText
-                        android:id="@+id/etItemName"
-                        android:layout_weight="1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginEnd="15dp"
-                        android:hint="Item name"
-                        android:padding="10dp" />
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:backgroundTint="#F9F8FA"
-                        android:paddingEnd="10dp"
-                        android:src="@drawable/mic_off_icon"
-                        android:id="@+id/btn_voice_to_text"/>
-                </LinearLayout>
-
-                <com.aseproject.frigg.common.FriggRecyclerView
-                    android:id="@+id/groceriesRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:gravity="top"
-                    android:padding="10dp"
-                    android:scrollbars="vertical" />
-
-                <include android:id="@+id/btnSaveEditedItems" layout="@layout/button_ui"/>
-            </LinearLayout>
-
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
-        <!-- Empty Table View -->
         <LinearLayout
-            android:id="@+id/groceries_empty_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:src="@drawable/app_icon"/>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp">
 
             <TextView
-                android:id="@+id/groceries_empty_text_view"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginRight="16dp"
-                android:gravity="center"
-                android:text="Sorry! list is empty."
-                android:textSize="15sp" />
+                android:layout_weight="1"
+                android:text="Add or edit items to your grocery list that you need to buy."
+                android:textSize="16sp"
+                android:textStyle="bold" />
 
+            <ImageView
+                android:id="@+id/ivEditItems"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/edit_icon" />
+
+            <ImageView
+                android:id="@+id/ivAddItems"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/add_icon" />
         </LinearLayout>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/labs_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="0dp">
+
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/groceriesRefreshLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:gravity="top">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:id="@+id/llAddItem"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:visibility="gone">
+
+                        <EditText
+                            android:id="@+id/etItemName"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="15dp"
+                            android:layout_weight="1"
+                            android:hint="Item name"
+                            android:padding="10dp" />
+
+                        <ImageView
+                            android:id="@+id/btn_voice_to_text"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:backgroundTint="#F9F8FA"
+                            android:paddingEnd="10dp"
+                            android:src="@drawable/mic_off_icon" />
+                    </LinearLayout>
+
+                    <com.aseproject.frigg.common.FriggRecyclerView
+                        android:id="@+id/groceriesRecyclerView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="top"
+                        android:padding="10dp"
+                        android:scrollbars="vertical" />
+
+                    <include
+                        android:id="@+id/btnSaveEditedItems"
+                        layout="@layout/button_ui" />
+                </LinearLayout>
+
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+
+            <!-- Empty Table View -->
+            <LinearLayout
+                android:id="@+id/groceries_empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:src="@drawable/app_icon" />
+
+                <TextView
+                    android:id="@+id/groceries_empty_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginRight="16dp"
+                    android:gravity="center"
+                    android:text="Sorry! list is empty."
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </LinearLayout>
 </androidx.core.widget.NestedScrollView>
