--- a/app/src/main/res/layout/fragment_food_detail.xml
+++ b/app/src/main/res/layout/fragment_food_detail.xml
@@ -10,10 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
         android:layout_margin="16dp"
-        android:gravity="center">
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/iv_item_image"
@@ -25,28 +25,40 @@
             android:id="@+id/foodItemName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
             android:layout_marginTop="30dp"
-            android:textStyle="bold"
+            android:text="Apples"
             android:textAllCaps="true"
             android:textColor="@color/black"
-            android:text="Apples"/>
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/foodAmt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Amount: 3Kgs"/>
-        <TextView
+            android:text="Amount: 3Kgs"
+            android:textSize="16sp" />
+
+        <LinearLayout
+            android:id="@+id/llExpiryDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Expiry Date: 10/mm/yy"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="Buy Date: 10/mm/yy"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvExpiryDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Expiry Date: 10/mm/yy"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvPurchaseDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Buy Date: 10/mm/yy"
+                android:textSize="16sp" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
