--- a/app/src/main/res/layout/common_dialog_fragment.xml
+++ b/app/src/main/res/layout/common_dialog_fragment.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:padding="20dp"
+        android:textStyle="bold"
         android:gravity="center"/>
     <TextView
         android:id="@+id/tvMessage"
@@ -17,7 +18,6 @@
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:padding="16dp"
-        android:gravity="center"
         android:layout_marginBottom="16dp"/>
 
     <LinearLayout
