Added Family member screen

--- a/app/src/main/res/layout/fragment_family_memeber.xml
+++ b/app/src/main/res/layout/fragment_family_memeber.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     android:layout_margin="20dp"
     android:orientation="vertical"
-    tools:context=".fragment.FamilyMemeberFragment">
+    tools:context=".fragment.FamilyMemberFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="20dp"
         android:text="Provide access of fridge to your friends and family by sharing this code."
         android:textSize="16sp"
+        android:layout_marginBottom="8dp"
         android:textStyle="bold" />
 
     <TextView
@@ -42,15 +41,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:text="While registering, they will be asked to add the below code."
+        android:text="Enter all the details including this code and they will be registered to the same fridge. "
         android:textSize="16sp" />
+
+    <include android:id="@+id/llCode" layout="@layout/button_ui" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
-        android:text="Once the enter the code you shared, they will be registered to the same fridge you are using. "
-        android:textSize="16sp" />
+        android:text="Added family members:"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-    <include android:id="@+id/llCode" layout="@layout/button_ui" />
+    <com.aseproject.frigg.common.FriggRecyclerView
+        android:id="@+id/rvFamilyMembers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="top"
+        android:scrollbars="vertical" />
 </LinearLayout>
